fix horizontal scroll in CodeElement

--- a/src/alfred/static/css/base_web_layout.css
+++ b/src/alfred/static/css/base_web_layout.css
@@ -56,9 +56,9 @@
 	margin-bottom: 0px;
 }
 
-#pre {
-	overflow-x: scroll;
-	width:720px;
+pre {
+	overflow-x: auto;
+	width: 720px;
 }
 
 .with-margin {
